Background styling for ResultData; Fix hotbar clicking; Fix detection of rebound hotkeys; Fix focus issue by refocusing on any key press in screen